refatorar(authentication): melhorar a organização do código e a programação defensiva- Reorganizar imports e a estrutura do código para melhor legibilidade- Adicionar programação defensiva com verificações de nulidade e tratamento de erros- Implementar constantes para valores de configuração- Melhorar o registro com mensagens detalhadas- Aprimorar o Dockerfile com verificações de pré-vôo de conexão com o DB- Atualizar pom.xml com plugin jacoco e regras de cobertura- Refatorar R2dbcUrlNormalizer com melhorias prontas para produção